--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name 4.213.219.48;
 
         location / {
             root /usr/share/nginx/html;
